--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -5,11 +5,16 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">List Notes</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+  <ion-list>
+    <ion-item *ngFor="let data of isiData | async; index as position">
+      <!-- <ion-img [src]=""></ion-img> -->
+      <ion-label>
+        <h1>{{data.Judul}} [{{data.Tanggal}}]</h1>
+        <h2>{{data.Isi}}</h2>
+        <p>Nilai : {{data.Nilai}}</p>
+      </ion-label>
+      <ion-button color="warning" (click)="editNotes()">Edit</ion-button>
+      <ion-button color="danger" (click)="deleteNotes()">Delete</ion-button>
+    </ion-item>
+  </ion-list>
 </ion-content>
