--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -6,15 +6,19 @@
 
 <ion-content [fullscreen]="true">
   <ion-list>
-    <ion-item *ngFor="let data of isiData | async; index as position">
-      <!-- <ion-img [src]=""></ion-img> -->
+    <ion-item
+      *ngFor="let data of isiData | async; index as position"
+      (click)="detailPage(index)"
+    >
       <ion-label>
         <h1>{{data.Judul}} [{{data.Tanggal}}]</h1>
         <h2>{{data.Isi}}</h2>
         <p>Nilai : {{data.Nilai}}</p>
       </ion-label>
       <ion-button color="warning" (click)="editNotes()">Edit</ion-button>
-      <ion-button color="danger" (click)="deleteNotes()">Delete</ion-button>
+      <ion-button color="danger" (click)="deleteNotes(data.Judul)"
+        >Delete</ion-button
+      >
     </ion-item>
   </ion-list>
 </ion-content>
